--- a/app/src/main/res/layout/cardview_not_delivered.xml
+++ b/app/src/main/res/layout/cardview_not_delivered.xml
@@ -31,6 +31,7 @@
             android:paddingBottom="@dimen/activity_vertical_margin">
 
             <RadioGroup
+                android:id="@+id/rgNotDelivered"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
