--- a/app/src/main/res/layout/cardview_delivered.xml
+++ b/app/src/main/res/layout/cardview_delivered.xml
@@ -41,6 +41,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/option_main"
                     android:layout_marginTop="80dp"
+                    android:tag="2"
                     android:checked="true"/>
 
                 <RadioButton
@@ -48,6 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/option_alternative"
+                    android:tag="3"
                     android:layout_marginTop="10dp"/>
 
             </RadioGroup>
