--- a/app/src/main/res/layout/item_delivery.xml
+++ b/app/src/main/res/layout/item_delivery.xml
@@ -19,12 +19,26 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvCodeDelivery" />
 
-    <TextView
-        android:id="@+id/tvStatusDelivery"
+    <ImageView
+        android:id="@+id/img_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvCodeDelivery" />
+        android:layout_below="@+id/tvCodeDelivery"
+        android:src="@drawable/ic_sync_black_24dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="35dp"
+        android:tint="@color/colorPrimary"
+        android:visibility="invisible"/>
+
+    <ImageView
+        android:id="@+id/img_delivery_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvCodeDelivery"
+        android:src="@drawable/ic_truck_black_24dp" />
 
 </RelativeLayout>
