--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -6,15 +6,24 @@
     tools:context=".DeliveryFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="@dimen/text_margin">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/text_margin"
+            android:layout_marginRight="@dimen/text_margin"
+            android:text="@string/select_status" />
 
         <ToggleButton
             android:id="@+id/tgDelivery"
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:textOn="Entregue"
-            android:textOff="Ocorrencia"
+            android:textOn="@string/delivered"
+            android:textOff="@string/occurrence"
             android:checked="true"/>
 
     </LinearLayout>
