--- a/app/src/main/res/layout/item_delivery.xml
+++ b/app/src/main/res/layout/item_delivery.xml
@@ -28,9 +28,8 @@
         android:layout_below="@+id/tvCodeDelivery"
         android:src="@drawable/ic_sync_black_24dp"
         android:layout_marginRight="30dp"
-        android:layout_marginEnd="35dp"
-        android:tint="@color/colorPrimary"
-        android:visibility="invisible"/>
+        android:layout_marginEnd="30dp"
+        android:tint="@color/colorOff" />
 
     <ImageView
         android:id="@+id/img_delivery_status"
@@ -39,6 +38,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/tvCodeDelivery"
-        android:src="@drawable/ic_truck_black_24dp" />
+        android:src="@drawable/ic_truck_black_24dp"
+        android:tint="@color/colorOff" />
 
 </RelativeLayout>
