--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#E91E63</color>
     <color name="donut">#FFCA28</color>
     <color name="textScan">#FFFFFF</color>
-    <color name="colorSuccess">#689F38</color>
+    <color name="colorSuccess">#26A69A</color>
+    <color name="colorOff">#e2e2e2</color>
 </resources>
