--- a/app/src/main/res/layout/cardview_delivered.xml
+++ b/app/src/main/res/layout/cardview_delivered.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="80dp">
+    android:layout_marginTop="@dimen/card_margin_top">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardDelivered"
