--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="chart_size">250dp</dimen>
     <dimen name="stroke_size">18dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="card_margin_top">180dp</dimen>
 </resources>
