--- a/app/src/main/res/layout/cardview_not_delivered.xml
+++ b/app/src/main/res/layout/cardview_not_delivered.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
