--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".HomeFragment">
 
     <com.txusballesteros.widgets.FitChart
@@ -11,7 +12,7 @@
         android:layout_gravity="center"
         android:id="@+id/fitChart"
         android:layout_marginBottom="30dp"
-        app:strokeSize="10dp"
+        app:strokeSize="20dp"
         app:valueStrokeColor="@color/donut"
         app:animationMode="overdraw" />
 
@@ -22,6 +23,7 @@
         android:layout_gravity="center"
         android:textSize="80sp"
         android:textAlignment="center"
+        android:textColor="@color/textScan"
         android:layout_marginBottom="50dp"/>
 
     <TextView
@@ -30,6 +32,7 @@
         android:layout_gravity="center"
         android:text="@string/count_delivered"
         android:textAlignment="center"
+        android:textColor="@color/textScan"
         android:layout_marginTop="20dp"/>
 
     <Button
@@ -39,6 +42,7 @@
         android:text="@string/reset"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="80dp"
+        android:textColor="@color/textScan"
         style="?android:attr/borderlessButtonStyle"/>
 
 </FrameLayout>
