--- a/app/src/main/res/layout/item_delivery.xml
+++ b/app/src/main/res/layout/item_delivery.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="@dimen/padding_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <TextView
         android:id="@+id/tvCodeDelivery"
@@ -11,12 +12,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:textColor="@color/textScan"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tvDateDelivery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/textScan"
         android:layout_below="@+id/tvCodeDelivery" />
 
     <ImageView
@@ -29,7 +32,7 @@
         android:src="@drawable/ic_sync_black_24dp"
         android:layout_marginRight="30dp"
         android:layout_marginEnd="30dp"
-        android:tint="@color/colorOff" />
+        android:tint="@color/colorPrimaryDark" />
 
     <ImageView
         android:id="@+id/img_delivery_status"
@@ -39,6 +42,6 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/tvCodeDelivery"
         android:src="@drawable/ic_truck_black_24dp"
-        android:tint="@color/colorOff" />
+        android:tint="@color/colorPrimaryDark" />
 
 </RelativeLayout>
